--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-yunik
-dahal
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 
+Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, doloribus nisi? A temporibus ratione molestiae in assumenda esse atque! Omnis sunt quam numquam dolor perspiciatis provident minima tempora ipsa recusandae.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto voluptatibus esse exercitationem? Dignissimos impedit et consequuntur provident corrupti nam animi?
+
+    lsbiraj 
+    
+</body>
+</html>
